exports[`no-unused-builtin-method-return > invalid(1): array.map(fn); 1`] = `

  1 | array.map(fn);

`;

exports[`no-unused-builtin-method-return > invalid(1): array.map(fn); 2`] = `

Message:
> 1 | array.map(fn);
    |       ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Set().has(other); 1`] = `

  1 | new Set().has(other);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Set().has(other); 2`] = `

Message:
> 1 | new Set().has(other);
    |           ^^^ Do not ignore the return value of \`.has(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Duration(...args).add(value); 1`] = `

  1 | new Temporal.Duration(...args).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Duration(...args).add(value); 2`] = `

Message:
> 1 | new Temporal.Duration(...args).add(value);
    |                                ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Duration(...args).round(value); 1`] = `

  1 | new Temporal.Duration(...args).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Duration(...args).round(value); 2`] = `

Message:
> 1 | new Temporal.Duration(...args).round(value);
    |                                ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Duration(...args).subtract(value); 1`] = `

  1 | new Temporal.Duration(...args).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Duration(...args).subtract(value); 2`] = `

Message:
> 1 | new Temporal.Duration(...args).subtract(value);
    |                                ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Duration(...args).with(value); 1`] = `

  1 | new Temporal.Duration(...args).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Duration(...args).with(value); 2`] = `

Message:
> 1 | new Temporal.Duration(...args).with(value);
    |                                ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Instant(...args).add(value); 1`] = `

  1 | new Temporal.Instant(...args).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Instant(...args).add(value); 2`] = `

Message:
> 1 | new Temporal.Instant(...args).add(value);
    |                               ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Instant(...args).round(value); 1`] = `

  1 | new Temporal.Instant(...args).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Instant(...args).round(value); 2`] = `

Message:
> 1 | new Temporal.Instant(...args).round(value);
    |                               ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Instant(...args).subtract(value); 1`] = `

  1 | new Temporal.Instant(...args).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.Instant(...args).subtract(value); 2`] = `

Message:
> 1 | new Temporal.Instant(...args).subtract(value);
    |                               ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDate(...args).add(value); 1`] = `

  1 | new Temporal.PlainDate(...args).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDate(...args).add(value); 2`] = `

Message:
> 1 | new Temporal.PlainDate(...args).add(value);
    |                                 ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDate(...args).subtract(value); 1`] = `

  1 | new Temporal.PlainDate(...args).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDate(...args).subtract(value); 2`] = `

Message:
> 1 | new Temporal.PlainDate(...args).subtract(value);
    |                                 ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDate(...args).with(value); 1`] = `

  1 | new Temporal.PlainDate(...args).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDate(...args).with(value); 2`] = `

Message:
> 1 | new Temporal.PlainDate(...args).with(value);
    |                                 ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDateTime(...args).add(value); 1`] = `

  1 | new Temporal.PlainDateTime(...args).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDateTime(...args).add(value); 2`] = `

Message:
> 1 | new Temporal.PlainDateTime(...args).add(value);
    |                                     ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDateTime(...args).round(value); 1`] = `

  1 | new Temporal.PlainDateTime(...args).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDateTime(...args).round(value); 2`] = `

Message:
> 1 | new Temporal.PlainDateTime(...args).round(value);
    |                                     ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDateTime(...args).subtract(value); 1`] = `

  1 | new Temporal.PlainDateTime(...args).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDateTime(...args).subtract(value); 2`] = `

Message:
> 1 | new Temporal.PlainDateTime(...args).subtract(value);
    |                                     ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDateTime(...args).with(value); 1`] = `

  1 | new Temporal.PlainDateTime(...args).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainDateTime(...args).with(value); 2`] = `

Message:
> 1 | new Temporal.PlainDateTime(...args).with(value);
    |                                     ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainMonthDay(...args).with(value); 1`] = `

  1 | new Temporal.PlainMonthDay(...args).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainMonthDay(...args).with(value); 2`] = `

Message:
> 1 | new Temporal.PlainMonthDay(...args).with(value);
    |                                     ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainTime(...args).add(value); 1`] = `

  1 | new Temporal.PlainTime(...args).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainTime(...args).add(value); 2`] = `

Message:
> 1 | new Temporal.PlainTime(...args).add(value);
    |                                 ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainTime(...args).round(value); 1`] = `

  1 | new Temporal.PlainTime(...args).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainTime(...args).round(value); 2`] = `

Message:
> 1 | new Temporal.PlainTime(...args).round(value);
    |                                 ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainTime(...args).subtract(value); 1`] = `

  1 | new Temporal.PlainTime(...args).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainTime(...args).subtract(value); 2`] = `

Message:
> 1 | new Temporal.PlainTime(...args).subtract(value);
    |                                 ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainTime(...args).with(value); 1`] = `

  1 | new Temporal.PlainTime(...args).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainTime(...args).with(value); 2`] = `

Message:
> 1 | new Temporal.PlainTime(...args).with(value);
    |                                 ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainYearMonth(...args).add(value); 1`] = `

  1 | new Temporal.PlainYearMonth(...args).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainYearMonth(...args).add(value); 2`] = `

Message:
> 1 | new Temporal.PlainYearMonth(...args).add(value);
    |                                      ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainYearMonth(...args).subtract(value); 1`] = `

  1 | new Temporal.PlainYearMonth(...args).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainYearMonth(...args).subtract(value); 2`] = `

Message:
> 1 | new Temporal.PlainYearMonth(...args).subtract(value);
    |                                      ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainYearMonth(...args).with(value); 1`] = `

  1 | new Temporal.PlainYearMonth(...args).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.PlainYearMonth(...args).with(value); 2`] = `

Message:
> 1 | new Temporal.PlainYearMonth(...args).with(value);
    |                                      ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.ZonedDateTime(...args).add(value); 1`] = `

  1 | new Temporal.ZonedDateTime(...args).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.ZonedDateTime(...args).add(value); 2`] = `

Message:
> 1 | new Temporal.ZonedDateTime(...args).add(value);
    |                                     ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.ZonedDateTime(...args).round(value); 1`] = `

  1 | new Temporal.ZonedDateTime(...args).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.ZonedDateTime(...args).round(value); 2`] = `

Message:
> 1 | new Temporal.ZonedDateTime(...args).round(value);
    |                                     ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.ZonedDateTime(...args).subtract(value); 1`] = `

  1 | new Temporal.ZonedDateTime(...args).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.ZonedDateTime(...args).subtract(value); 2`] = `

Message:
> 1 | new Temporal.ZonedDateTime(...args).subtract(value);
    |                                     ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.ZonedDateTime(...args).with(value); 1`] = `

  1 | new Temporal.ZonedDateTime(...args).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(1): new Temporal.ZonedDateTime(...args).with(value); 2`] = `

Message:
> 1 | new Temporal.ZonedDateTime(...args).with(value);
    |                                     ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(10): array.find(fn); 1`] = `

  1 | array.find(fn);

`;

exports[`no-unused-builtin-method-return > invalid(10): array.find(fn); 2`] = `

Message:
> 1 | array.find(fn);
    |       ^^^^ Do not ignore the return value of \`.find(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(10): let set = new Set(); set.union(other); 1`] = `

  1 | let set = new Set(); set.union(other);

`;

exports[`no-unused-builtin-method-return > invalid(10): let set = new Set(); set.union(other); 2`] = `

Message:
> 1 | let set = new Set(); set.union(other);
    |                          ^^^^^ Do not ignore the return value of \`.union(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(11): array.findIndex(fn); 1`] = `

  1 | array.findIndex(fn);

`;

exports[`no-unused-builtin-method-return > invalid(11): array.findIndex(fn); 2`] = `

Message:
> 1 | array.findIndex(fn);
    |       ^^^^^^^^^ Do not ignore the return value of \`.findIndex(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(11): const set = new Set(); const alias = set; alias.union(other); 1`] = `

  1 | const set = new Set(); const alias = set; alias.union(other);

`;

exports[`no-unused-builtin-method-return > invalid(11): const set = new Set(); const alias = set; alias.union(other); 2`] = `

Message:
> 1 | const set = new Set(); const alias = set; alias.union(other);
    |                                                 ^^^^^ Do not ignore the return value of \`.union(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(12): array.findLast(fn); 1`] = `

  1 | array.findLast(fn);

`;

exports[`no-unused-builtin-method-return > invalid(12): array.findLast(fn); 2`] = `

Message:
> 1 | array.findLast(fn);
    |       ^^^^^^^^ Do not ignore the return value of \`.findLast(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(12): const set = new Set(); (set)?.union?.(other); 1`] = `

  1 | const set = new Set(); (set)?.union?.(other);

`;

exports[`no-unused-builtin-method-return > invalid(12): const set = new Set(); (set)?.union?.(other); 2`] = `

Message:
> 1 | const set = new Set(); (set)?.union?.(other);
    |                               ^^^^^ Do not ignore the return value of \`.union(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(13): array.findLastIndex(fn); 1`] = `

  1 | array.findLastIndex(fn);

`;

exports[`no-unused-builtin-method-return > invalid(13): array.findLastIndex(fn); 2`] = `

Message:
> 1 | array.findLastIndex(fn);
    |       ^^^^^^^^^^^^^ Do not ignore the return value of \`.findLastIndex(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(13): const set = new Set(); set[\"union\"](other); 1`] = `

  1 | const set = new Set(); set["union"](other);

`;

exports[`no-unused-builtin-method-return > invalid(13): const set = new Set(); set[\"union\"](other); 2`] = `

Message:
> 1 | const set = new Set(); set["union"](other);
    |                            ^^^^^^^ Do not ignore the return value of \`.union(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(14): array.flat(); 1`] = `

  1 | array.flat();

`;

exports[`no-unused-builtin-method-return > invalid(14): array.flat(); 2`] = `

Message:
> 1 | array.flat();
    |       ^^^^ Do not ignore the return value of \`.flat(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(14): const set = new Set(); const method = \"union\"; set[method](other); 1`] = `

  1 | const set = new Set(); const method = "union"; set[method](other);

`;

exports[`no-unused-builtin-method-return > invalid(14): const set = new Set(); const method = \"union\"; set[method](other); 2`] = `

Message:
> 1 | const set = new Set(); const method = "union"; set[method](other);
    |                                                    ^^^^^^ Do not ignore the return value of \`.union(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(15): array.flatMap(fn); 1`] = `

  1 | array.flatMap(fn);

`;

exports[`no-unused-builtin-method-return > invalid(15): array.flatMap(fn); 2`] = `

Message:
> 1 | array.flatMap(fn);
    |       ^^^^^^^ Do not ignore the return value of \`.flatMap(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(15): const set = new Set(); set.union(/* keep */ other); 1`] = `

  1 | const set = new Set(); set.union(/* keep */ other);

`;

exports[`no-unused-builtin-method-return > invalid(15): const set = new Set(); set.union(/* keep */ other); 2`] = `

Message:
> 1 | const set = new Set(); set.union(/* keep */ other);
    |                            ^^^^^ Do not ignore the return value of \`.union(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(16): array.includes(value); 1`] = `

  1 | array.includes(value);

`;

exports[`no-unused-builtin-method-return > invalid(16): array.includes(value); 2`] = `

Message:
> 1 | array.includes(value);
    |       ^^^^^^^^ Do not ignore the return value of \`.includes(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(16): const set = new Set(); for (set.union(other); ; set.intersection(other)) {} 1`] = `

  1 | const set = new Set(); for (set.union(other); ; set.intersection(other)) {}

`;

exports[`no-unused-builtin-method-return > invalid(16): const set = new Set(); for (set.union(other); ; set.intersection(other)) {} 2`] = `

Message:
> 1 | const set = new Set(); for (set.union(other); ; set.intersection(other)) {}
    |                                 ^^^^^ Do not ignore the return value of \`.union(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(16): const set = new Set(); for (set.union(other); ; set.intersection(other)) {} 3`] = `

Message:
> 1 | const set = new Set(); for (set.union(other); ; set.intersection(other)) {}
    |                                                     ^^^^^^^^^^^^ Do not ignore the return value of \`.intersection(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(17): array.indexOf(value); 1`] = `

  1 | array.indexOf(value);

`;

exports[`no-unused-builtin-method-return > invalid(17): array.indexOf(value); 2`] = `

Message:
> 1 | array.indexOf(value);
    |       ^^^^^^^ Do not ignore the return value of \`.indexOf(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(17): const set = new Set(); await set.union(other); 1`] = `

  1 | const set = new Set(); await set.union(other);

`;

exports[`no-unused-builtin-method-return > invalid(17): const set = new Set(); await set.union(other); 2`] = `

Message:
> 1 | const set = new Set(); await set.union(other);
    |                                  ^^^^^ Do not ignore the return value of \`.union(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(18): array.join(\",\"); 1`] = `

  1 | array.join(",");

`;

exports[`no-unused-builtin-method-return > invalid(18): array.join(\",\"); 2`] = `

Message:
> 1 | array.join(",");
    |       ^^^^ Do not ignore the return value of \`.join(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(18): const date = Temporal.PlainDate.from(value); date.add({days: 1}); 1`] = `

  1 | const date = Temporal.PlainDate.from(value); date.add({days: 1});

`;

exports[`no-unused-builtin-method-return > invalid(18): const date = Temporal.PlainDate.from(value); date.add({days: 1}); 2`] = `

Message:
> 1 | const date = Temporal.PlainDate.from(value); date.add({days: 1});
    |                                                   ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(19): array.keys(); 1`] = `

  1 | array.keys();

`;

exports[`no-unused-builtin-method-return > invalid(19): array.keys(); 2`] = `

Message:
> 1 | array.keys();
    |       ^^^^ Do not ignore the return value of \`.keys(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(19): let date = Temporal.PlainDate.from(value); const alias = date; alias.subtract({days: 1}); 1`] = `

  1 | let date = Temporal.PlainDate.from(value); const alias = date; alias.subtract({days: 1});

`;

exports[`no-unused-builtin-method-return > invalid(19): let date = Temporal.PlainDate.from(value); const alias = date; alias.subtract({days: 1}); 2`] = `

Message:
> 1 | let date = Temporal.PlainDate.from(value); const alias = date; alias.subtract({days: 1});
    |                                                                      ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Duration.from(value).add(value); 1`] = `

  1 | Temporal.Duration.from(value).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Duration.from(value).add(value); 2`] = `

Message:
> 1 | Temporal.Duration.from(value).add(value);
    |                               ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Duration.from(value).round(value); 1`] = `

  1 | Temporal.Duration.from(value).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Duration.from(value).round(value); 2`] = `

Message:
> 1 | Temporal.Duration.from(value).round(value);
    |                               ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Duration.from(value).subtract(value); 1`] = `

  1 | Temporal.Duration.from(value).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Duration.from(value).subtract(value); 2`] = `

Message:
> 1 | Temporal.Duration.from(value).subtract(value);
    |                               ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Duration.from(value).with(value); 1`] = `

  1 | Temporal.Duration.from(value).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Duration.from(value).with(value); 2`] = `

Message:
> 1 | Temporal.Duration.from(value).with(value);
    |                               ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Instant.from(value).add(value); 1`] = `

  1 | Temporal.Instant.from(value).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Instant.from(value).add(value); 2`] = `

Message:
> 1 | Temporal.Instant.from(value).add(value);
    |                              ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Instant.from(value).round(value); 1`] = `

  1 | Temporal.Instant.from(value).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Instant.from(value).round(value); 2`] = `

Message:
> 1 | Temporal.Instant.from(value).round(value);
    |                              ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Instant.from(value).subtract(value); 1`] = `

  1 | Temporal.Instant.from(value).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.Instant.from(value).subtract(value); 2`] = `

Message:
> 1 | Temporal.Instant.from(value).subtract(value);
    |                              ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDate.from(value).add(value); 1`] = `

  1 | Temporal.PlainDate.from(value).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDate.from(value).add(value); 2`] = `

Message:
> 1 | Temporal.PlainDate.from(value).add(value);
    |                                ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDate.from(value).subtract(value); 1`] = `

  1 | Temporal.PlainDate.from(value).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDate.from(value).subtract(value); 2`] = `

Message:
> 1 | Temporal.PlainDate.from(value).subtract(value);
    |                                ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDate.from(value).with(value); 1`] = `

  1 | Temporal.PlainDate.from(value).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDate.from(value).with(value); 2`] = `

Message:
> 1 | Temporal.PlainDate.from(value).with(value);
    |                                ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDateTime.from(value).add(value); 1`] = `

  1 | Temporal.PlainDateTime.from(value).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDateTime.from(value).add(value); 2`] = `

Message:
> 1 | Temporal.PlainDateTime.from(value).add(value);
    |                                    ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDateTime.from(value).round(value); 1`] = `

  1 | Temporal.PlainDateTime.from(value).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDateTime.from(value).round(value); 2`] = `

Message:
> 1 | Temporal.PlainDateTime.from(value).round(value);
    |                                    ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDateTime.from(value).subtract(value); 1`] = `

  1 | Temporal.PlainDateTime.from(value).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDateTime.from(value).subtract(value); 2`] = `

Message:
> 1 | Temporal.PlainDateTime.from(value).subtract(value);
    |                                    ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDateTime.from(value).with(value); 1`] = `

  1 | Temporal.PlainDateTime.from(value).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainDateTime.from(value).with(value); 2`] = `

Message:
> 1 | Temporal.PlainDateTime.from(value).with(value);
    |                                    ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainMonthDay.from(value).with(value); 1`] = `

  1 | Temporal.PlainMonthDay.from(value).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainMonthDay.from(value).with(value); 2`] = `

Message:
> 1 | Temporal.PlainMonthDay.from(value).with(value);
    |                                    ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainTime.from(value).add(value); 1`] = `

  1 | Temporal.PlainTime.from(value).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainTime.from(value).add(value); 2`] = `

Message:
> 1 | Temporal.PlainTime.from(value).add(value);
    |                                ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainTime.from(value).round(value); 1`] = `

  1 | Temporal.PlainTime.from(value).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainTime.from(value).round(value); 2`] = `

Message:
> 1 | Temporal.PlainTime.from(value).round(value);
    |                                ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainTime.from(value).subtract(value); 1`] = `

  1 | Temporal.PlainTime.from(value).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainTime.from(value).subtract(value); 2`] = `

Message:
> 1 | Temporal.PlainTime.from(value).subtract(value);
    |                                ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainTime.from(value).with(value); 1`] = `

  1 | Temporal.PlainTime.from(value).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainTime.from(value).with(value); 2`] = `

Message:
> 1 | Temporal.PlainTime.from(value).with(value);
    |                                ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainYearMonth.from(value).add(value); 1`] = `

  1 | Temporal.PlainYearMonth.from(value).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainYearMonth.from(value).add(value); 2`] = `

Message:
> 1 | Temporal.PlainYearMonth.from(value).add(value);
    |                                     ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainYearMonth.from(value).subtract(value); 1`] = `

  1 | Temporal.PlainYearMonth.from(value).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainYearMonth.from(value).subtract(value); 2`] = `

Message:
> 1 | Temporal.PlainYearMonth.from(value).subtract(value);
    |                                     ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainYearMonth.from(value).with(value); 1`] = `

  1 | Temporal.PlainYearMonth.from(value).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.PlainYearMonth.from(value).with(value); 2`] = `

Message:
> 1 | Temporal.PlainYearMonth.from(value).with(value);
    |                                     ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.ZonedDateTime.from(value).add(value); 1`] = `

  1 | Temporal.ZonedDateTime.from(value).add(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.ZonedDateTime.from(value).add(value); 2`] = `

Message:
> 1 | Temporal.ZonedDateTime.from(value).add(value);
    |                                    ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.ZonedDateTime.from(value).round(value); 1`] = `

  1 | Temporal.ZonedDateTime.from(value).round(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.ZonedDateTime.from(value).round(value); 2`] = `

Message:
> 1 | Temporal.ZonedDateTime.from(value).round(value);
    |                                    ^^^^^ Do not ignore the return value of \`.round(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.ZonedDateTime.from(value).subtract(value); 1`] = `

  1 | Temporal.ZonedDateTime.from(value).subtract(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.ZonedDateTime.from(value).subtract(value); 2`] = `

Message:
> 1 | Temporal.ZonedDateTime.from(value).subtract(value);
    |                                    ^^^^^^^^ Do not ignore the return value of \`.subtract(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.ZonedDateTime.from(value).with(value); 1`] = `

  1 | Temporal.ZonedDateTime.from(value).with(value);

`;

exports[`no-unused-builtin-method-return > invalid(2): Temporal.ZonedDateTime.from(value).with(value); 2`] = `

Message:
> 1 | Temporal.ZonedDateTime.from(value).with(value);
    |                                    ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): array?.map(fn); 1`] = `

  1 | array?.map(fn);

`;

exports[`no-unused-builtin-method-return > invalid(2): array?.map(fn); 2`] = `

Message:
> 1 | array?.map(fn);
    |        ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(2): new Set().union(other); 1`] = `

  1 | new Set().union(other);

`;

exports[`no-unused-builtin-method-return > invalid(2): new Set().union(other); 2`] = `

Message:
> 1 | new Set().union(other);
    |           ^^^^^ Do not ignore the return value of \`.union(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(20): array.lastIndexOf(value); 1`] = `

  1 | array.lastIndexOf(value);

`;

exports[`no-unused-builtin-method-return > invalid(20): array.lastIndexOf(value); 2`] = `

Message:
> 1 | array.lastIndexOf(value);
    |       ^^^^^^^^^^^ Do not ignore the return value of \`.lastIndexOf(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(20): const date = Temporal.PlainDate.from(value); date?.with?.({day: 1}); 1`] = `

  1 | const date = Temporal.PlainDate.from(value); date?.with?.({day: 1});

`;

exports[`no-unused-builtin-method-return > invalid(20): const date = Temporal.PlainDate.from(value); date?.with?.({day: 1}); 2`] = `

Message:
> 1 | const date = Temporal.PlainDate.from(value); date?.with?.({day: 1});
    |                                                    ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(21): array.slice(1); 1`] = `

  1 | array.slice(1);

`;

exports[`no-unused-builtin-method-return > invalid(21): array.slice(1); 2`] = `

Message:
> 1 | array.slice(1);
    |       ^^^^^ Do not ignore the return value of \`.slice(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(21): const date = Temporal.PlainDate.from(value); date[\"add\"]({days: 1}); 1`] = `

  1 | const date = Temporal.PlainDate.from(value); date["add"]({days: 1});

`;

exports[`no-unused-builtin-method-return > invalid(21): const date = Temporal.PlainDate.from(value); date[\"add\"]({days: 1}); 2`] = `

Message:
> 1 | const date = Temporal.PlainDate.from(value); date["add"]({days: 1});
    |                                                   ^^^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(22): array.some(fn); 1`] = `

  1 | array.some(fn);

`;

exports[`no-unused-builtin-method-return > invalid(22): array.some(fn); 2`] = `

Message:
> 1 | array.some(fn);
    |       ^^^^ Do not ignore the return value of \`.some(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(22): const date = Temporal.PlainDate.from(value); for (date.add({days: 1}); ; ) {} 1`] = `

  1 | const date = Temporal.PlainDate.from(value); for (date.add({days: 1}); ; ) {}

`;

exports[`no-unused-builtin-method-return > invalid(22): const date = Temporal.PlainDate.from(value); for (date.add({days: 1}); ; ) {} 2`] = `

Message:
> 1 | const date = Temporal.PlainDate.from(value); for (date.add({days: 1}); ; ) {}
    |                                                        ^^^ Do not ignore the return value of \`.add(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(23): array.every(fn); 1`] = `

  1 | array.every(fn);

`;

exports[`no-unused-builtin-method-return > invalid(23): array.every(fn); 2`] = `

Message:
> 1 | array.every(fn);
    |       ^^^^^ Do not ignore the return value of \`.every(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(23): const array = []; array.with(0, value); 1`] = `

  1 | const array = []; array.with(0, value);

`;

exports[`no-unused-builtin-method-return > invalid(23): const array = []; array.with(0, value); 2`] = `

Message:
> 1 | const array = []; array.with(0, value);
    |                         ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(24): array.entries(); 1`] = `

  1 | array.entries();

`;

exports[`no-unused-builtin-method-return > invalid(24): array.entries(); 2`] = `

Message:
> 1 | array.entries();
    |       ^^^^^^^ Do not ignore the return value of \`.entries(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(25): array.concat(otherArray); 1`] = `

  1 | array.concat(otherArray);

`;

exports[`no-unused-builtin-method-return > invalid(25): array.concat(otherArray); 2`] = `

Message:
> 1 | array.concat(otherArray);
    |       ^^^^^^ Do not ignore the return value of \`.concat(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(26): array.toSorted(compare); 1`] = `

  1 | array.toSorted(compare);

`;

exports[`no-unused-builtin-method-return > invalid(26): array.toSorted(compare); 2`] = `

Message:
> 1 | array.toSorted(compare);
    |       ^^^^^^^^ Do not ignore the return value of \`.toSorted(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(27): array.toReversed(); 1`] = `

  1 | array.toReversed();

`;

exports[`no-unused-builtin-method-return > invalid(27): array.toReversed(); 2`] = `

Message:
> 1 | array.toReversed();
    |       ^^^^^^^^^^ Do not ignore the return value of \`.toReversed(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(28): array.toSpliced(0, 1); 1`] = `

  1 | array.toSpliced(0, 1);

`;

exports[`no-unused-builtin-method-return > invalid(28): array.toSpliced(0, 1); 2`] = `

Message:
> 1 | array.toSpliced(0, 1);
    |       ^^^^^^^^^ Do not ignore the return value of \`.toSpliced(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(29): array.map(fn).join(\",\"); 1`] = `

  1 | array.map(fn).join(",");

`;

exports[`no-unused-builtin-method-return > invalid(29): array.map(fn).join(\",\"); 2`] = `

Message:
> 1 | array.map(fn).join(",");
    |               ^^^^ Do not ignore the return value of \`.join(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(3): array.map?.(fn); 1`] = `

  1 | array.map?.(fn);

`;

exports[`no-unused-builtin-method-return > invalid(3): array.map?.(fn); 2`] = `

Message:
> 1 | array.map?.(fn);
    |       ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(3): new Set().intersection(other); 1`] = `

  1 | new Set().intersection(other);

`;

exports[`no-unused-builtin-method-return > invalid(3): new Set().intersection(other); 2`] = `

Message:
> 1 | new Set().intersection(other);
    |           ^^^^^^^^^^^^ Do not ignore the return value of \`.intersection(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(30): [].values(); 1`] = `

  1 | [].values();

`;

exports[`no-unused-builtin-method-return > invalid(30): [].values(); 2`] = `

Message:
> 1 | [].values();
    |    ^^^^^^ Do not ignore the return value of \`.values(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(31): const array = []; array.values(); 1`] = `

  1 | const array = []; array.values();

`;

exports[`no-unused-builtin-method-return > invalid(31): const array = []; array.values(); 2`] = `

Message:
> 1 | const array = []; array.values();
    |                         ^^^^^^ Do not ignore the return value of \`.values(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(32): let array = []; array.values(); 1`] = `

  1 | let array = []; array.values();

`;

exports[`no-unused-builtin-method-return > invalid(32): let array = []; array.values(); 2`] = `

Message:
> 1 | let array = []; array.values();
    |                       ^^^^^^ Do not ignore the return value of \`.values(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(33): Array(1).values(); 1`] = `

  1 | Array(1).values();

`;

exports[`no-unused-builtin-method-return > invalid(33): Array(1).values(); 2`] = `

Message:
> 1 | Array(1).values();
    |          ^^^^^^ Do not ignore the return value of \`.values(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(34): new Array(1).values(); 1`] = `

  1 | new Array(1).values();

`;

exports[`no-unused-builtin-method-return > invalid(34): new Array(1).values(); 2`] = `

Message:
> 1 | new Array(1).values();
    |              ^^^^^^ Do not ignore the return value of \`.values(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(35): Array.from(iterable).values(); 1`] = `

  1 | Array.from(iterable).values();

`;

exports[`no-unused-builtin-method-return > invalid(35): Array.from(iterable).values(); 2`] = `

Message:
> 1 | Array.from(iterable).values();
    |                      ^^^^^^ Do not ignore the return value of \`.values(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(36): [].with(0, value); 1`] = `

  1 | [].with(0, value);

`;

exports[`no-unused-builtin-method-return > invalid(36): [].with(0, value); 2`] = `

Message:
> 1 | [].with(0, value);
    |    ^^^^ Do not ignore the return value of \`.with(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(37): const values = [];\nvalues.map(value => value * 2); 1`] = `

  1 | const values = [];
  2 | values.map(value => value * 2);

`;

exports[`no-unused-builtin-method-return > invalid(37): const values = [];\nvalues.map(value => value * 2); 2`] = `

Message:
  1 | const values = [];
> 2 | values.map(value => value * 2);
    |        ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(38): let values = [];\nvalues.map(value => value * 2); 1`] = `

  1 | let values = [];
  2 | values.map(value => value * 2);

`;

exports[`no-unused-builtin-method-return > invalid(38): let values = [];\nvalues.map(value => value * 2); 2`] = `

Message:
  1 | let values = [];
> 2 | values.map(value => value * 2);
    |        ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(39): for (array.map(fn); condition; update()) {\n\tfoo();\n} 1`] = `

  1 | for (array.map(fn); condition; update()) {
  2 | 	foo();
  3 | }

`;

exports[`no-unused-builtin-method-return > invalid(39): for (array.map(fn); condition; update()) {\n\tfoo();\n} 2`] = `

Message:
> 1 | for (array.map(fn); condition; update()) {
    |            ^^^ Do not ignore the return value of \`.map(…)\`.
  2 | 	foo();
  3 | }

`;

exports[`no-unused-builtin-method-return > invalid(4): array[\"map\"](fn); 1`] = `

  1 | array["map"](fn);

`;

exports[`no-unused-builtin-method-return > invalid(4): array[\"map\"](fn); 2`] = `

Message:
> 1 | array["map"](fn);
    |       ^^^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(4): new Set().difference(other); 1`] = `

  1 | new Set().difference(other);

`;

exports[`no-unused-builtin-method-return > invalid(4): new Set().difference(other); 2`] = `

Message:
> 1 | new Set().difference(other);
    |           ^^^^^^^^^^ Do not ignore the return value of \`.difference(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(40): for (; condition; values.map(fn)) {\n\tfoo();\n} 1`] = `

  1 | for (; condition; values.map(fn)) {
  2 | 	foo();
  3 | }

`;

exports[`no-unused-builtin-method-return > invalid(40): for (; condition; values.map(fn)) {\n\tfoo();\n} 2`] = `

Message:
> 1 | for (; condition; values.map(fn)) {
    |                          ^^^ Do not ignore the return value of \`.map(…)\`.
  2 | 	foo();
  3 | }

`;

exports[`no-unused-builtin-method-return > invalid(41): async function run() {\n\tconst values = [];\n\tawait values.map(fn);\n} 1`] = `

  1 | async function run() {
  2 | 	const values = [];
  3 | 	await values.map(fn);
  4 | }

`;

exports[`no-unused-builtin-method-return > invalid(41): async function run() {\n\tconst values = [];\n\tawait values.map(fn);\n} 2`] = `

Message:
  1 | async function run() {
  2 | 	const values = [];
> 3 | 	await values.map(fn);
    | 	             ^^^ Do not ignore the return value of \`.map(…)\`.
  4 | }

`;

exports[`no-unused-builtin-method-return > invalid(42): async function run() {\n\tconst values = [];\n\tawait values.map(async value => value);\n} 1`] = `

  1 | async function run() {
  2 | 	const values = [];
  3 | 	await values.map(async value => value);
  4 | }

`;

exports[`no-unused-builtin-method-return > invalid(42): async function run() {\n\tconst values = [];\n\tawait values.map(async value => value);\n} 2`] = `

Message:
  1 | async function run() {
  2 | 	const values = [];
> 3 | 	await values.map(async value => value);
    | 	             ^^^ Do not ignore the return value of \`.map(…)\`.
  4 | }

`;

exports[`no-unused-builtin-method-return > invalid(43): const values = []; const alias = values; alias.map(fn); 1`] = `

  1 | const values = []; const alias = values; alias.map(fn);

`;

exports[`no-unused-builtin-method-return > invalid(43): const values = []; const alias = values; alias.map(fn); 2`] = `

Message:
> 1 | const values = []; const alias = values; alias.map(fn);
    |                                                ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(44): let ArrayLike = [];\nArrayLike.map(fn); 1`] = `

  1 | let ArrayLike = [];
  2 | ArrayLike.map(fn);

`;

exports[`no-unused-builtin-method-return > invalid(44): let ArrayLike = [];\nArrayLike.map(fn); 2`] = `

Message:
  1 | let ArrayLike = [];
> 2 | ArrayLike.map(fn);
    |           ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(45): const values = getValues();\nvalues.slice(1); 1`] = `

  1 | const values = getValues();
  2 | values.slice(1);

`;

exports[`no-unused-builtin-method-return > invalid(45): const values = getValues();\nvalues.slice(1); 2`] = `

Message:
  1 | const values = getValues();
> 2 | values.slice(1);
    |        ^^^^^ Do not ignore the return value of \`.slice(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(46): const values = getValues();\nvalues.findIndex(value => value > 0); 1`] = `

  1 | const values = getValues();
  2 | values.findIndex(value => value > 0);

`;

exports[`no-unused-builtin-method-return > invalid(46): const values = getValues();\nvalues.findIndex(value => value > 0); 2`] = `

Message:
  1 | const values = getValues();
> 2 | values.findIndex(value => value > 0);
    |        ^^^^^^^^^ Do not ignore the return value of \`.findIndex(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(47): function check(array) { array.includes(value); } 1`] = `

  1 | function check(array) { array.includes(value); }

`;

exports[`no-unused-builtin-method-return > invalid(47): function check(array) { array.includes(value); } 2`] = `

Message:
> 1 | function check(array) { array.includes(value); }
    |                               ^^^^^^^^ Do not ignore the return value of \`.includes(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(48): getValues().includes(value); 1`] = `

  1 | getValues().includes(value);

`;

exports[`no-unused-builtin-method-return > invalid(48): getValues().includes(value); 2`] = `

Message:
> 1 | getValues().includes(value);
    |             ^^^^^^^^ Do not ignore the return value of \`.includes(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(49): expectation(value).includes(expected); 1`] = `

  1 | expectation(value).includes(expected);

`;

exports[`no-unused-builtin-method-return > invalid(49): expectation(value).includes(expected); 2`] = `

Message:
> 1 | expectation(value).includes(expected);
    |                    ^^^^^^^^ Do not ignore the return value of \`.includes(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(5): Array(1).map(fn); 1`] = `

  1 | Array(1).map(fn);

`;

exports[`no-unused-builtin-method-return > invalid(5): Array(1).map(fn); 2`] = `

Message:
> 1 | Array(1).map(fn);
    |          ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(5): new Set().symmetricDifference(other); 1`] = `

  1 | new Set().symmetricDifference(other);

`;

exports[`no-unused-builtin-method-return > invalid(5): new Set().symmetricDifference(other); 2`] = `

Message:
> 1 | new Set().symmetricDifference(other);
    |           ^^^^^^^^^^^^^^^^^^^ Do not ignore the return value of \`.symmetricDifference(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(50): expectation.soft(value).includes(expected); 1`] = `

  1 | expectation.soft(value).includes(expected);

`;

exports[`no-unused-builtin-method-return > invalid(50): expectation.soft(value).includes(expected); 2`] = `

Message:
> 1 | expectation.soft(value).includes(expected);
    |                         ^^^^^^^^ Do not ignore the return value of \`.includes(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(51): const assertion = expectation(value); assertion.includes(expected); 1`] = `

  1 | const assertion = expectation(value); assertion.includes(expected);

`;

exports[`no-unused-builtin-method-return > invalid(51): const assertion = expectation(value); assertion.includes(expected); 2`] = `

Message:
> 1 | const assertion = expectation(value); assertion.includes(expected);
    |                                                 ^^^^^^^^ Do not ignore the return value of \`.includes(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(52): expect.custom(value).includes(expected); 1`] = `

  1 | expect.custom(value).includes(expected);

`;

exports[`no-unused-builtin-method-return > invalid(52): expect.custom(value).includes(expected); 2`] = `

Message:
> 1 | expect.custom(value).includes(expected);
    |                      ^^^^^^^^ Do not ignore the return value of \`.includes(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(53): function Symbol(value) { return value; } Symbol([]).slice(1); 1`] = `

  1 | function Symbol(value) { return value; } Symbol([]).slice(1);

`;

exports[`no-unused-builtin-method-return > invalid(53): function Symbol(value) { return value; } Symbol([]).slice(1); 2`] = `

Message:
> 1 | function Symbol(value) { return value; } Symbol([]).slice(1);
    |                                                     ^^^^^ Do not ignore the return value of \`.slice(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(54): const method = \"map\"; array[method](fn); 1`] = `

  1 | const method = "map"; array[method](fn);

`;

exports[`no-unused-builtin-method-return > invalid(54): const method = \"map\"; array[method](fn); 2`] = `

Message:
> 1 | const method = "map"; array[method](fn);
    |                             ^^^^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(55): const values = [];\nvalues.map(value => value * 2), sideEffect(); 1`] = `

  1 | const values = [];
  2 | values.map(value => value * 2), sideEffect();

`;

exports[`no-unused-builtin-method-return > invalid(55): const values = [];\nvalues.map(value => value * 2), sideEffect(); 2`] = `

Message:
  1 | const values = [];
> 2 | values.map(value => value * 2), sideEffect();
    |        ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(56): function run(array, value) {\n\treturn array.map(fn), value;\n} 1`] = `

  1 | function run(array, value) {
  2 | 	return array.map(fn), value;
  3 | }

`;

exports[`no-unused-builtin-method-return > invalid(56): function run(array, value) {\n\treturn array.map(fn), value;\n} 2`] = `

Message:
  1 | function run(array, value) {
> 2 | 	return array.map(fn), value;
    | 	             ^^^ Do not ignore the return value of \`.map(…)\`.
  3 | }

`;

exports[`no-unused-builtin-method-return > invalid(57): if ((array.map(fn), condition)) {\n\tfoo();\n} 1`] = `

  1 | if ((array.map(fn), condition)) {
  2 | 	foo();
  3 | }

`;

exports[`no-unused-builtin-method-return > invalid(57): if ((array.map(fn), condition)) {\n\tfoo();\n} 2`] = `

Message:
> 1 | if ((array.map(fn), condition)) {
    |            ^^^ Do not ignore the return value of \`.map(…)\`.
  2 | 	foo();
  3 | }

`;

exports[`no-unused-builtin-method-return > invalid(6): new Array(1).map(fn); 1`] = `

  1 | new Array(1).map(fn);

`;

exports[`no-unused-builtin-method-return > invalid(6): new Array(1).map(fn); 2`] = `

Message:
> 1 | new Array(1).map(fn);
    |              ^^^ Do not ignore the return value of \`.map(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(6): new Set().isSubsetOf(other); 1`] = `

  1 | new Set().isSubsetOf(other);

`;

exports[`no-unused-builtin-method-return > invalid(6): new Set().isSubsetOf(other); 2`] = `

Message:
> 1 | new Set().isSubsetOf(other);
    |           ^^^^^^^^^^ Do not ignore the return value of \`.isSubsetOf(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(7): array.at(0); 1`] = `

  1 | array.at(0);

`;

exports[`no-unused-builtin-method-return > invalid(7): array.at(0); 2`] = `

Message:
> 1 | array.at(0);
    |       ^^ Do not ignore the return value of \`.at(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(7): new Set().isSupersetOf(other); 1`] = `

  1 | new Set().isSupersetOf(other);

`;

exports[`no-unused-builtin-method-return > invalid(7): new Set().isSupersetOf(other); 2`] = `

Message:
> 1 | new Set().isSupersetOf(other);
    |           ^^^^^^^^^^^^ Do not ignore the return value of \`.isSupersetOf(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(8): array.slice?.(1); 1`] = `

  1 | array.slice?.(1);

`;

exports[`no-unused-builtin-method-return > invalid(8): array.slice?.(1); 2`] = `

Message:
> 1 | array.slice?.(1);
    |       ^^^^^ Do not ignore the return value of \`.slice(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(8): new Set().isDisjointFrom(other); 1`] = `

  1 | new Set().isDisjointFrom(other);

`;

exports[`no-unused-builtin-method-return > invalid(8): new Set().isDisjointFrom(other); 2`] = `

Message:
> 1 | new Set().isDisjointFrom(other);
    |           ^^^^^^^^^^^^^^ Do not ignore the return value of \`.isDisjointFrom(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(9): array.filter(fn); 1`] = `

  1 | array.filter(fn);

`;

exports[`no-unused-builtin-method-return > invalid(9): array.filter(fn); 2`] = `

Message:
> 1 | array.filter(fn);
    |       ^^^^^^ Do not ignore the return value of \`.filter(…)\`.

`;

exports[`no-unused-builtin-method-return > invalid(9): const set = new Set(); set.union(other); 1`] = `

  1 | const set = new Set(); set.union(other);

`;

exports[`no-unused-builtin-method-return > invalid(9): const set = new Set(); set.union(other); 2`] = `

Message:
> 1 | const set = new Set(); set.union(other);
    |                            ^^^^^ Do not ignore the return value of \`.union(…)\`.

`;
